Avoid user select in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@ body {
     min-height: 100vh;
     position: relative;
 }
+
+* {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
