Use Background img instead of CardTable

--- a/src/index.css
+++ b/src/index.css
@@ -30,4 +30,7 @@ body {
     width: 100vw;
     min-height: 100vh;
     position: relative;
+    background-image: url("/images/table-bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
